@@ -1,4 +1,5 @@
 0.06
+ - Fix check in case of invalid leader in Field008 plugin.
  - Fix field 008 presence.
  - Fix field 040e presence.
  - Rewrite identification of record id for reporting. Default value is control
